--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,12 @@
     margin: 0;
     padding: 0;   /*restablecer margenes*/
     box-sizing: border-box;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.elementoNav a {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit; /* Mantiene el color del texto del <li> */
 }
 
 #imLogo {
@@ -9,7 +15,7 @@
 }
 
 .contNav {
-    background-color: rgba(190, 199, 242, 0.822);
+    background-color: rgba(198, 207, 253, 0.822);
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -21,22 +27,16 @@
 }
 
 .elementoNav {
-    font-size: 20px;
+    font-size: 22px;
     color: rgb(4, 24, 67);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     position: relative; 
 }
 
-.elementoNav2 {
-    font-size: 20px;
-    color: rgb(4, 24, 67);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
 .elementoNav:hover {
 
     font-weight: bold;
-    color: rgb(3, 39, 116); 
     cursor: pointer;
 }
 
@@ -74,7 +74,7 @@
 
 #titulo1{
     text-align: center;
-    margin-top: 50px;
+    margin-top: 35px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 50px;
 }
@@ -97,6 +97,7 @@
     overflow: hidden;
     width: 750px;
     height: 450px;
+    
 }
 
 #contImagenes{
@@ -104,9 +105,11 @@
     flex-direction: row;
     position: relative;
     animation-name: sliderFotos;
-    animation-duration: 30s;
+    animation-duration: 50s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
+    
+
 }
 
 #tam{
@@ -123,5 +126,37 @@
     to{
         left: -554%;
     }
+
+}
+
+/*footer*/
+
+#idFooter{
+    margin-top: 120px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(170, 182, 241, 0.822);
+}
+
+#iconoF{
+
+    width: 50px;
+    padding-top: 30px;
+    margin: 10px;
+
+}
+
+.cLista{
+
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.eLista{
+
+    margin: 30px;
 
 }
