--- a/css/estadio.css
+++ b/css/estadio.css
@@ -5,6 +5,13 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+#main{
+
+    margin-left: 250px;
+    margin-right: 250px;
+
+}
+
 .elementoNav a {
     text-decoration: none; /* Elimina el subrayado */
     color: inherit; /* Mantiene el color del texto del <li> */
@@ -127,8 +134,9 @@
 #textoCaract{
 
 font-size: 20px;
-text-align: center;
-padding: 60px;
+margin-top: 50px;
+margin-left: 30px;
+
 }
 
 #Cinstalaciones{
@@ -162,10 +170,10 @@ padding: 60px;
 #textoUbi{
 
     font-size: 20px;
-    padding-top: 50px;
-    margin: 60px;
+    margin-top: 60px;
     line-height: 2;
-    text-align: center;
+    margin-left: 30px;
+    
     
 
 }
