--- a/css/historia.css
+++ b/css/historia.css
@@ -5,11 +5,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#main{
-    margin-left: 200px;
-    margin-right: 200px;
+.elementoNav a {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit; /* Mantiene el color del texto del <li> */
 }
-
 
 #imLogo {
     width: 100px;
@@ -70,25 +69,103 @@
     cursor: pointer;
 }
 
-.elementoNav a {
-    text-decoration: none; /* Elimina el subrayado */
-    color: inherit; /* Mantiene el color del texto del <li> */
-}
+/*cuerpo*/
 
-#infoLegal{
-
-    margin: 50px;
-    margin-left: 300px;
-    margin-right: 300px;
+#main{
+    margin-left: 250px;
+    margin-right: 250px;
     
+}
+
+
+#t1{
+
+    text-align: center;
+    margin-top: 70px;
+}
+
+#p1{
+    text-align: center;
+    font-size: 20px;
+    line-height: 1.6;
+    margin-top: 70px;
+}
+
+#escudo{
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+}
+
+#escudoT{
+    width: 400px;
 
 }
 
-p{
-    line-height: 2;
-    font-size: 17px;
+#plantillaAntigua{
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
 }
 
-p,h1{
-    display: inline-block;
+#tamPlantiila{
+    width: 400px;
+}
+
+#tamAlcorconazo{
+    width: 700px;
+}
+
+
+#escudo2{
+    display: flex;
+    justify-content: center;
+    margin-top: 70px;
+    
+}
+
+#escudoTam2{
+    width: 400px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*footer*/
+
+#idFooter{
+    margin-top: 120px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(170, 182, 241, 0.822);
+}
+
+#iconoF{
+
+    width: 50px;
+    padding-top: 30px;
+    margin: 10px;
+
+}
+
+.cLista{
+
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+
+}
+
+.eLista{
+
+    margin: 30px;
+
 }
