--- a/css/noticias.css
+++ b/css/noticias.css
@@ -5,11 +5,10 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-#main{
-    margin-left: 200px;
-    margin-right: 200px;
+.elementoNav a {
+    text-decoration: none; /* Elimina el subrayado */
+    color: inherit; /* Mantiene el color del texto del <li> */
 }
-
 
 #imLogo {
     width: 100px;
@@ -70,25 +69,94 @@
     cursor: pointer;
 }
 
-.elementoNav a {
-    text-decoration: none; /* Elimina el subrayado */
-    color: inherit; /* Mantiene el color del texto del <li> */
-}
-
-#infoLegal{
-
-    margin: 50px;
-    margin-left: 300px;
-    margin-right: 300px;
+/*main*/
+#main{
+    margin-left: 350px;
+    margin-right: 350px;
     
+}
+
+#t1{
+    margin-top: 60px;
+}
+
+
+
+#tamFoto{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+
+.noticia1{
+    margin-top: 60px;
+    display: flex;
+    align-content: center;
+    flex-direction: row;
+    border: 4px solid black;
+    padding: 50px;
+    border-radius: 35px;
+    
+}
+
+.imagen1{
+    display: flex ;
+    align-content: center;
+    margin-left: 30px;
+    width: 100%;
+    height: auto;
+    object-fit: fill;
+    
+}
+
+#tamFoto2{
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+}
+#imagen2{
+    
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    
+}
+
+
+
+
+
+/*footer*/
+
+#idFooter{
+    margin-top: 120px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(170, 182, 241, 0.822);
+}
+
+#iconoF{
+
+    width: 50px;
+    padding-top: 30px;
+    margin: 10px;
 
 }
 
-p{
-    line-height: 2;
-    font-size: 17px;
+.cLista{
+
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+
 }
 
-p,h1{
-    display: inline-block;
+.eLista{
+
+    margin: 30px;
+
 }
+
+
+
