--- a/css/noticias.css
+++ b/css/noticias.css
@@ -71,56 +71,33 @@
 
 /*main*/
 #main{
-    margin-left: 350px;
-    margin-right: 350px;
+    margin-left: 200px;
+    margin-right: 200px;
     
 }
-
 #t1{
-    margin-top: 60px;
+    margin-top: 50px;
 }
 
-
-
-#tamFoto{
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-}
-
-.noticia1{
-    margin-top: 60px;
+#cont1{
     display: flex;
-    align-content: center;
     flex-direction: row;
-    border: 4px solid black;
-    padding: 50px;
-    border-radius: 35px;
+    font-size: 18px;
+    margin-top: 50px;
+    border: 3px solid black;
+    border-radius: 10px;
     
 }
-
-.imagen1{
-    display: flex ;
+#tam1{
+    width: 100%;
+    height: auto;
+}
+#elemento1{
+    padding: 15px;
+    width: 50%;
     align-content: center;
-    margin-left: 30px;
-    width: 100%;
-    height: auto;
-    object-fit: fill;
-    
 }
 
-#tamFoto2{
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-}
-#imagen2{
-    
-    width: 100%;
-    height: auto;
-    object-fit: contain;
-    
-}
 
 
 
