--- a/css/Abonados.css
+++ b/css/Abonados.css
@@ -96,6 +96,7 @@
     justify-content: space-around;
     margin-top: 70px;
     
+    
 }
 
 .elementos{
@@ -106,6 +107,7 @@
     font-size: 20px;
     line-height: 1.8;
     border-radius: 30px;
+    box-shadow: 2px 5px 5px 5px rgba(235, 231, 38, 0.651);
 }
 
 #cont2{
