--- a/css/Equipaciones.css
+++ b/css/Equipaciones.css
@@ -156,3 +156,64 @@ p{
     margin: 30px;
 
 }
+
+
+@media screen and (min-width: 0px) and (max-width: 800px){
+
+    /*header*/
+        .contNav {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Opcional, para centrar los elementos */
+        }
+    
+        #listaNav {
+            display: flex;
+            flex-direction: column;
+            padding: 0;
+            list-style: none; /* Elimina los estilos de lista */
+        }
+    
+        #listaNav li {
+            text-align: center; /* Opcional, para centrar los enlaces */
+        }
+        .subMenu {
+            display: none; /* Ocultamos el submenú por defecto */
+            position: absolute;
+            left: -200px;
+            list-style: none;
+            background-color: rgb(243, 249, 255);
+            border-radius: 5px; 
+            width: 150px; /* Ancho ajustable */
+            border:1px solid gray;
+            top: -30px;
+        }
+
+        #main{
+    
+            margin-left: 30px;
+            margin-right: 30px;
+                
+        }
+
+        #titulo1{
+            text-align: center;
+        }
+
+        #titulo3{
+            text-align: center;
+        }
+
+        #titulo2{
+            text-align: center;
+        }
+
+        #txt1{
+            text-align: center;
+        }
+
+
+
+
+
+}
