--- a/css/politicas.css
+++ b/css/politicas.css
@@ -92,3 +92,46 @@ p{
 p,h1{
     display: inline-block;
 }
+
+@media screen and (min-width: 0px) and (max-width: 800px){
+
+    /*header*/
+        .contNav {
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* Opcional, para centrar los elementos */
+        }
+    
+        #listaNav {
+            display: flex;
+            flex-direction: column;
+            padding: 0;
+            list-style: none; /* Elimina los estilos de lista */
+        }
+    
+        #listaNav li {
+            text-align: center; /* Opcional, para centrar los enlaces */
+        }
+        .subMenu {
+            display: none; /* Ocultamos el submenú por defecto */
+            position: absolute;
+            left: -200px;
+            list-style: none;
+            background-color: rgb(243, 249, 255);
+            border-radius: 5px; 
+            width: 150px; /* Ancho ajustable */
+            border:1px solid gray;
+            top: -30px;
+        }
+        #infoLegal{
+
+            margin: 10px;
+            margin-left: 10px;
+            margin-right: 10px;
+            
+        
+        }
+        
+
+
+}
