--- a/css/CategoriasInferiores.css
+++ b/css/CategoriasInferiores.css
@@ -5,6 +5,8 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
+
+
 .elementoNav a {
     text-decoration: none; /* Elimina el subrayado */
     color: inherit; /* Mantiene el color del texto del <li> */
@@ -69,53 +71,46 @@
     cursor: pointer;
 }
 
-#main{
-    margin-left: 150px;
-    margin-right: 150px;
+
+/*CUERPO*/
+
+.main{
+    margin-left: 350px;
+    margin-right: 350px;
+    line-height: 1.8;
     
 }
 
-#t1{
-    margin-top: 30px;
-}
 
-#tamAbonate{
-    width: 1300px;
-}
+.cont {
+    background-color: #f4f4f4b4;
+    padding: 10px;
+    margin-top: 25px;
+    border: 3px solid rgb(226, 206, 22); 
+    border-radius: 25px;
+    box-shadow: 0px 0px 15px rgba(226, 206, 22, 0.7); 
+    text-align: left;
+  }
+  
 
-#fotoCamapaña{
+#fotoCat{
     display: flex;
     justify-content: center;
     margin: 50px;
 }
 
-
-.cont{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-top: 70px;
-    
-    
+#h1{
+    margin-top: 35px;
 }
 
-.elementos{
+#h2{
+    margin-top: 20px;
+}
 
-    border: 2px solid rgba(235, 231, 38, 0.651);
-    margin: 15px;
-    padding: 15px;
+p{
     font-size: 20px;
-    line-height: 1.8;
-    border-radius: 30px;
-    box-shadow: 2px 5px 5px 5px rgba(235, 231, 38, 0.651);
 }
 
-#cont2{
-    margin-top: 30px;
-    line-height: 2;
-    font-size: 20px;
-    
-}
 
 #boton {
     background-color: #ffcc00; /* Amarillo Alcorcón */
@@ -141,6 +136,21 @@ a{
     background-color: #e6b800; /* Amarillo más oscuro */
     transform: scale(1.05);
 }
+
+
+#titulo1{
+    text-align: center;
+    margin-top: 35px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50px;
+}
+#titulo2{
+    text-align: center;
+    margin-top: 10px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 40px;
+}
+
 
 
 
@@ -178,7 +188,6 @@ a{
 
 }
 
-
 @media screen and (min-width: 0px) and (max-width: 800px){
 
     /*header*/
@@ -209,28 +218,5 @@ a{
             border:1px solid gray;
             top: -30px;
         }
-
-        #main{
-            margin-right: 20px;
-            margin-left: 20px;
-        }
-
-        #t1{
-            text-align: center;
-        }
-
-        #tamAbonate{
-            width: 100%;
-        }
-
-        .cont{
-            display: flex;
-            flex-direction: column;
-        }
-
-        
-
-        
-
 
 }
