--- a/css/index.css
+++ b/css/index.css
@@ -163,6 +163,39 @@
 
 }
 
+#cookie {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(199, 199, 199, 0.9);
+    color: white;
+    padding: 20px;
+    text-align: center;
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#cookie p {
+    margin: 0;
+    font-size: 1.5em;
+    font-weight: bold;
+}
+
+#cookie button {
+    background-color: rgb(57, 74, 233);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 15px;
+    cursor: pointer;
+    font-size: 1em;
+    margin-left: 15px;
+}
+
 @media screen and (min-width: 0px) and (max-width: 800px){
 
     /*header*/
